[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui_design/audio_menu/audio_menu.gd" type="Script" id=1]
[ext_resource path="res://helpers/source_code_pro_explanations.tres" type="DynamicFont" id=2]

[node name="audio_menu" type="Panel"]
pause_mode = 2
self_modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 210.0
margin_bottom = 110.0
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 35.0
margin_bottom = 70.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer"]
margin_right = 35.0
margin_bottom = 70.0
custom_constants/separation = 10
alignment = 1

[node name="All" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 1.0
margin_right = 35.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 2 )
text = "All"
align = 2

[node name="Music" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 35.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 2 )
text = "Music"
align = 2

[node name="SFX" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 53.0
margin_right = 35.0
margin_bottom = 69.0
custom_fonts/font = ExtResource( 2 )
text = "SFX"
align = 2

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 39.0
margin_right = 170.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.88

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer2"]
margin_right = 131.0
margin_bottom = 70.0
custom_constants/separation = 7
alignment = 1

[node name="all" type="HSlider" parent="MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer"]
margin_top = 4.0
margin_right = 131.0
margin_bottom = 20.0
size_flags_horizontal = 3
value = 50.0
ticks_on_borders = false

[node name="music" type="HSlider" parent="MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer"]
margin_top = 27.0
margin_right = 131.0
margin_bottom = 43.0
size_flags_horizontal = 3
value = 50.0
ticks_on_borders = false

[node name="SFX" type="HSlider" parent="MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer"]
margin_top = 50.0
margin_right = 131.0
margin_bottom = 66.0
size_flags_horizontal = 3
value = 50.0
ticks_on_borders = false

[connection signal="value_changed" from="MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer/all" to="." method="_on_all_value_changed"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer/music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer/SFX" to="." method="_on_SFX_value_changed"]
